--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookie-session": "^2.0.0-beta.3",
     "eslint": "^4.19.1",
     "express": "^4.16.3",
+    "lodash": "^4.17.10",
     "mongoose": "^5.1.2",
     "nodemon": "^1.17.5",
     "passport": "^0.4.0",
